--- a/static/css/bootstrap.customizations.css
+++ b/static/css/bootstrap.customizations.css
@@ -239,6 +239,23 @@ to {opacity: 1;}
     margin-bottom: 5px;
 }
 
+/**
+ * Navigation bar extras 
+ */
 span.navbar-brand {
     cursor: pointer;
+}
+
+/**
+ * Misc
+ */
+.profile-pic {
+    -webkit-box-shadow: 2px 3px 4px 1px #666;
+    -moz-box-shadow: 2px 3px 4px 1px #666;
+    box-shadow: 0px 0px 10px #666;
+    float: right;
+}
+
+.profile-pic:hover {    
+    box-shadow: 0 0 15px #677;
 }
