Added new content

--- a/templates/post.html
+++ b/templates/post.html
@@ -18,7 +18,7 @@
       <h4>Share this:</h4>
       <ul class="share-buttons">
 	<li>
-	  <span class="share-button" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent('$title$')); return false;"><img src="/images/flat_web_icon_set/Facebook.png" alt="Share on Facebook" /></span>
+	  <span class="share-button" title="Share on Facebook" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent('$title$')); return false;"><img src="/images/flat_web_icon_set/Facebook.png" /></span>
 	</li>
 	<li>
 	  <span class="share-button" onclick="window.open('https://twitter.com/intent/tweet?via=dhillerstrom&text=' + encodeURIComponent('$title$') + ':%20'  + encodeURIComponent(document.URL)); return false;" title="Share via Twitter"><img src="/images/flat_web_icon_set/Twitter.png" /></span>
@@ -27,7 +27,7 @@
 	  <span class="share-button" title="Share on Google+" onclick="window.open('https://plus.google.com/share?url=' + encodeURIComponent(document.URL)); return false;" ><img src="/images/flat_web_icon_set/Googleplus.png" alt="Share on Google+" /></span>
 	</li>
 	<li>
-	  <span class="share-button" title="Email" onclick="window.location.assign('mailto:?subject=' + encodeURIComponent('$title$') + '&body=' +  encodeURIComponent(document.URL)); return false;"><img src="/images/flat_web_icon_set/Email.png" alt="Share via e-mail" /></span>
+	  <span class="share-button" title="Share via e-mail" onclick="window.location.assign('mailto:?subject=' + encodeURIComponent('$title$') + '&body=' +  encodeURIComponent(document.URL)); return false;"><img src="/images/flat_web_icon_set/Email.png" /></span>
 	</li>
       </ul>
     </div>
